<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="E_CtrlId" Id="{fbb9f2d2-c911-4ba8-bff4-7e84f684cb30}">
    <Declaration><![CDATA[TYPE E_CtrlId :
(
	//not defined after startup...
	NONE,
	RFW_11 := 1,
	CYL_1 := 2,
	VPC_1 := 3,	
	UMC_1 := 4,	
	PRS_1 := 5,	
	BCC_1 := 6,
	DRV_1 := 7,
	E_CtrlIdMax
);
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>