<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.20">
  <POU Name="MiddlePRG_1" Id="{d0b780f9-d9b7-47f3-8805-851f8ce5d376}">
    <Declaration><![CDATA[PROGRAM MiddlePRG_1
VAR
	bolPlcStartupDone: BOOL := FALSE;
	bolHostInitDone: BOOL := FALSE;
	bolInitDone: BOOL := FALSE;
	fbRFW_11: FB_RFW;
	pTmpSIf_RFW: POINTER TO Base_Elements.T_Ctrl_SIf_RFW;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*__________________________________________________________________________________________________
¦	
¦	Vistaprint Schweiz GmbH
¦	CH - 8401 Winterthur
¦
¦	www.vistaprint.ch - info@vistaprint.ch
¦___________________________________________________________________________________________________

Function desription:
call of all controller (FUB) for the middle task class.


History:
Version		Date			Author		Comment
---------------------------------------------------------------------------------------------------
0.00.1		25.09.2013		AVME/KVO	Start history


___________________________________________________________________________________________________*)

// -----------------------------------------------------------------------------------------------
// Initialize the PLC Parameter and check the PLC health
// -----------------------------------------------------------------------------------------------
IF (NOT bolPlcStartupDone) THEN
	bolPlcStartupDone := TRUE;	
	
	// init	
	// Level0 -------------------------------------------------------------------
	
	// RFID Reader, element Controller in this Task, Drive in fastest Task class
	fbRFW_11.iniAllCtrlArrays(ADR(g_a_pCtrlInst),ADR(g_a_pCtrlCIf),E_CtrlId.RFW_11); // init and entry fb_instance in global fb pointer array
	fbRFW_11.pRFD_SIf := g_pFB_RFR^.getSIf();
	pTmpSIf_RFW := fbRFW_11.getCtrlSIf();
	pTmpSIf_RFW^.Cfg.eTyp := E_Typ_RFW.RF382R;
	// the following parameters are not needed at the moment because the parameters will not be written down for RF382R at the moment
	pTmpSIf_RFW^.Cfg.stNetId := '192.168.2.123.1.1'; //PLC NetId
	pTmpSIf_RFW^.Cfg.uinSlaveAddr := 1024; //Io card Ethercat adress 
	pTmpSIf_RFW^.Cfg.bolGetTrayIDAuto := FALSE;
	
	
END_IF
// -----------------------------------------------------------------------------------------------


// -----------------------------------------------------------------------------------------------
// The host system is downloading all parameter at startup. 
// bolPlcStartupDone will be set to true after the Host is done with the initialization
// -----------------------------------------------------------------------------------------------
IF (bolPlcStartupDone AND (NOT bolHostInitDone) AND NOT bolInitDone) THEN
	bolHostInitDone := TRUE;
END_IF
// -----------------------------------------------------------------------------------------------


// -----------------------------------------------------------------------------------------------
// Start PLC code initialization
// -----------------------------------------------------------------------------------------------
IF NOT bolInitDone AND bolPlcStartupDone AND bolHostInitDone THEN
		
	bolInitDone := TRUE;
END_IF
// -----------------------------------------------------------------------------------------------

// -----------------------------------------------------------------------------------------------
// Normal Run mode after all the initialization is done
// -----------------------------------------------------------------------------------------------
IF (bolInitDone AND bolPlcStartupDone AND bolHostInitDone) THEN
	
	//****************************************************************************************************
	// cyclic controller calls
	//****************************************************************************************************
	fbRFW_11();
	
END_IF
// -----------------------------------------------------------------------------------------------]]></ST>
    </Implementation>
    <ObjectProperties>﻿<XmlArchive>
  <Data>
    <o xml:space="preserve" t="POUImageProperty">
      <n n="ImageData" />
      <v n="TransparencyColor">"White"</v>
      <v n="MakeTransparent">false</v>
    </o>
  </Data>
  <TypeList>
    <Type n="Boolean">System.Boolean</Type>
    <Type n="POUImageProperty">{bb741845-1ec5-4be9-bb0d-2cf7058af574}</Type>
    <Type n="String">System.String</Type>
  </TypeList>
</XmlArchive></ObjectProperties>
  </POU>
</TcPlcObject>